first structure for OSI message read & write

--- a/src/simulation_interfaces/CMakeLists.txt
+++ b/src/simulation_interfaces/CMakeLists.txt
@@ -8,6 +8,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/ROSBridge.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/SUMOBridge.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/UnrealBridge.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/VTDBridge.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/OSIBridge.cpp
 
 )
 
