--- a/include/simulation_interfaces/CMakeLists.txt
+++ b/include/simulation_interfaces/CMakeLists.txt
@@ -7,6 +7,9 @@ ${CMAKE_CURRENT_LIST_DIR}/ROSBridge.h
 ${CMAKE_CURRENT_LIST_DIR}/SUMOBridge.h 
 ${CMAKE_CURRENT_LIST_DIR}/UnrealBridge.h 
 ${CMAKE_CURRENT_LIST_DIR}/VTDBridge.h
+${CMAKE_CURRENT_LIST_DIR}/OSIBridge.h
+
+${CMAKE_CURRENT_LIST_DIR}/OSIMessages.h
 
 PARENT_SCOPE
 )
