add OSMP class to differentiate OSI and OSMP

--- a/src/simulation_interfaces/CMakeLists.txt
+++ b/src/simulation_interfaces/CMakeLists.txt
@@ -9,7 +9,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/SUMOBridge.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/UnrealBridge.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/VTDBridge.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/OSIBridge.cpp
-
+${CMAKE_CURRENT_SOURCE_DIR}/OSMPBridge.cpp
 )
 
 set (COSIMA_SOURCE ${COSIMA_SOURCE} ${SIMULATION_INTERFACE_SOURCE} PARENT_SCOPE)
