--- a/include/simulation_interfaces/CMakeLists.txt
+++ b/include/simulation_interfaces/CMakeLists.txt
@@ -8,6 +8,7 @@ ${CMAKE_CURRENT_LIST_DIR}/SUMOBridge.h
 ${CMAKE_CURRENT_LIST_DIR}/UnrealBridge.h 
 ${CMAKE_CURRENT_LIST_DIR}/VTDBridge.h
 ${CMAKE_CURRENT_LIST_DIR}/OSIBridge.h
+${CMAKE_CURRENT_LIST_DIR}/OSMPBridge.h
 
 ${CMAKE_CURRENT_LIST_DIR}/OSIMessages.h
 
