--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ ${CMAKE_CURRENT_LIST_DIR}/tests-CARLABaseSystemInterface.cpp
 ${CMAKE_CURRENT_LIST_DIR}/tests-mapper.cpp
 ${CMAKE_CURRENT_LIST_DIR}/tests-FMIInterface.cpp
 ${CMAKE_CURRENT_LIST_DIR}/tests-simulationinterfacefactory.cpp
+${CMAKE_CURRENT_LIST_DIR}/tests-OSMPInterface.cpp
 
 ${CMAKE_CURRENT_LIST_DIR}/MockBaseSimulator.cpp
 ${CMAKE_CURRENT_LIST_DIR}/MockInterfaceSimulator.cpp
