--- a/include/base_interfaces/CMakeLists.txt
+++ b/include/base_interfaces/CMakeLists.txt
@@ -4,3 +4,7 @@ ${CMAKE_CURRENT_LIST_DIR}/DominionInterface.h
 
 PARENT_SCOPE
 )
+
+if(WITH_CARLA)
+	set(BASE_INTERFACE_INCLUDES ${BASE_INTERFACE_INCLUDES} ${CMAKE_CURRENT_LIST_DIR}/CARLAInterface.h PARENT_SCOPE)
+endif(WITH_CARLA)
