--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@ set (TESTFILES
 ${CMAKE_CURRENT_LIST_DIR}/tests-main.cpp
 ${CMAKE_CURRENT_LIST_DIR}/tests-yaml_reader.cpp
 ${CMAKE_CURRENT_LIST_DIR}/test-isimulationdata.cpp
+${CMAKE_CURRENT_LIST_DIR}/tests-CARLABaseSystemInterface.cpp
 ${CMAKE_CURRENT_LIST_DIR}/tests-mapper.cpp
 ${CMAKE_CURRENT_LIST_DIR}/tests-FMIInterface.cpp
 ${CMAKE_CURRENT_LIST_DIR}/tests-simulationinterfacefactory.cpp
