Bugfix: missing paranthesis resulted in CARLAInterface.h/.cpp always being included

--- a/src/base_interfaces/CMakeLists.txt
+++ b/src/base_interfaces/CMakeLists.txt
@@ -5,8 +5,8 @@ ${CMAKE_CURRENT_SOURCE_DIR}/DominionInterface.cpp
 
 )
 
-if(WITH_CARLA)
+if(${WITH_CARLA})
 	set(SIMULATION_INTERFACE_SOURCE ${SIMULATION_INTERFACE_SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/CARLAInterface.cpp)
-endif(WITH_CARLA)
+endif(${WITH_CARLA})
 
 set (COSIMA_SOURCE ${COSIMA_SOURCE} ${SIMULATION_INTERFACE_SOURCE} PARENT_SCOPE)
