--- a/include/base_interfaces/CMakeLists.txt
+++ b/include/base_interfaces/CMakeLists.txt
@@ -5,6 +5,6 @@ ${CMAKE_CURRENT_LIST_DIR}/DominionInterface.h
 PARENT_SCOPE
 )
 
-if(WITH_CARLA)
+if(${WITH_CARLA})
 	set(BASE_INTERFACE_INCLUDES ${BASE_INTERFACE_INCLUDES} ${CMAKE_CURRENT_LIST_DIR}/CARLAInterface.h PARENT_SCOPE)
-endif(WITH_CARLA)
+endif(${WITH_CARLA})
