--- a/include/CoSiMa.h.in
+++ b/include/CoSiMa.h.in
@@ -1,12 +1,16 @@
 ﻿#ifndef COSIMA_H
 #define COSIMA_H
 
+#cmakedefine WITH_CARLA
+
 #include <iostream>
 #include <vector>
 #include <string>
 #include "base_interfaces/BaseSystemInterface.h"
 #include "base_interfaces/DominionInterface.h"
+#ifdef WITH_CARLA
 #include "base_interfaces/CARLAInterface.h"
+#endif
 #include "simulation_interfaces/iSimulationData.h"
 #include "configreader/YAMLConfigReader.h"
 #include "SimulationInterfaceFactory.h"
