--- a/include/base_interfaces/CMakeLists.txt
+++ b/include/base_interfaces/CMakeLists.txt
@@ -6,5 +6,10 @@ PARENT_SCOPE
 )
 
 if(${WITH_CARLA})
-	set(BASE_INTERFACE_INCLUDES ${BASE_INTERFACE_INCLUDES} ${CMAKE_CURRENT_LIST_DIR}/CARLAInterface.h PARENT_SCOPE)
+	set(BASE_INTERFACE_INCLUDES 
+	${BASE_INTERFACE_INCLUDES}
+	${CMAKE_CURRENT_LIST_DIR}/CARLAInterface.h 
+	${CMAKE_CURRENT_LIST_DIR}/Carla/Utility.h 
+	
+	PARENT_SCOPE)
 endif(${WITH_CARLA})
