--- a/src/base_interfaces/CMakeLists.txt
+++ b/src/base_interfaces/CMakeLists.txt
@@ -6,7 +6,11 @@ ${CMAKE_CURRENT_SOURCE_DIR}/DominionInterface.cpp
 )
 
 if(${WITH_CARLA})
-	set(SIMULATION_INTERFACE_SOURCE ${SIMULATION_INTERFACE_SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/CARLAInterface.cpp)
+	set(SIMULATION_INTERFACE_SOURCE 
+	${SIMULATION_INTERFACE_SOURCE} 
+	${CMAKE_CURRENT_SOURCE_DIR}/CARLAInterface.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/Carla/Utility.cpp
+	)
 endif(${WITH_CARLA})
 
 set (COSIMA_SOURCE ${COSIMA_SOURCE} ${SIMULATION_INTERFACE_SOURCE} PARENT_SCOPE)
