--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,7 @@
-﻿#version
-cmake_minimum_required (VERSION 3.8)
-
-add_subdirectory(mapper)
-add_subdirectory(simulation_interfaces)
-add_subdirectory(configreader)
-add_subdirectory(base_interfaces)
-
-#source
-set(COSIMA_SOURCE ${COSIMA_SOURCE}
-"${CMAKE_CURRENT_LIST_DIR}/SimulationInterfaceFactory.cpp" 
+﻿#source
+set(CARLA_OSI_LIB_SOURCE ${CARLA_OSI_LIB_SOURCE}
+"${CMAKE_CURRENT_LIST_DIR}/CARLA2OSIInterface.cpp" 
+"${CMAKE_CURRENT_LIST_DIR}/Utility.cpp" 
 
 PARENT_SCOPE
 )
