Add optional include "CMake_FetchContent_Overrides" to allow overriding cmake FetchContent declarations Currently limited to overriding the repositories utilized for carla and it's non-conan dependencies in FetchLibCarla_client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMakeModules ${CMAKE_MODULE_PATH})
 # OSI is not distributed as conan package, but we already took care of installig its dependency (protobuf), so we can just use it as submodule
 add_subdirectory(lib/open-simulation-interface/ EXCLUDE_FROM_ALL)
 
+# Read CMake_FetchContent_Overrides for changes of FetchContent_declare default of other included scripts (currently applies to FetchLibCarla_client, only)
+include(FetchContent)
+include(${CMAKE_CURRENT_LIST_DIR}/CMake_FetchContent_Overrides.cmake OPTIONAL)
+
 # use CMake FetchContent Module to fetch LibCarla_client using our custom FetchLibCarla_client.cmake script
 include(FetchLibCarla_client)
 fetch_carla_and_non_conan_dependencies()# always use release build of carla client
