Separate id mapping from Utility.h

--- a/include/carla_osi/CMakeLists.txt
+++ b/include/carla_osi/CMakeLists.txt
@@ -1,5 +1,6 @@
 #includes
 set(CARLA_OSI_LIB_INCLUDES ${CARLA_OSI_LIB_INCLUDES}
 ${CMAKE_CURRENT_LIST_DIR}/Geometry.h
+${CMAKE_CURRENT_LIST_DIR}/Identifiers.h
 
 PARENT_SCOPE)
