--- a/include/carla_osi/CMakeLists.txt
+++ b/include/carla_osi/CMakeLists.txt
@@ -2,5 +2,6 @@
 set(CARLA_OSI_LIB_INCLUDES ${CARLA_OSI_LIB_INCLUDES}
 ${CMAKE_CURRENT_LIST_DIR}/Geometry.h
 ${CMAKE_CURRENT_LIST_DIR}/Identifiers.h
+${CMAKE_CURRENT_LIST_DIR}/Lanes.h
 
 PARENT_SCOPE)
