Move traffic signs and traffic lights from Utility to carla_osi::traffic_signals
Also make pointers smart

--- a/include/carla_osi/CMakeLists.txt
+++ b/include/carla_osi/CMakeLists.txt
@@ -3,5 +3,6 @@ set(CARLA_OSI_LIB_INCLUDES ${CARLA_OSI_LIB_INCLUDES}
 ${CMAKE_CURRENT_LIST_DIR}/Geometry.h
 ${CMAKE_CURRENT_LIST_DIR}/Identifiers.h
 ${CMAKE_CURRENT_LIST_DIR}/Lanes.h
+${CMAKE_CURRENT_LIST_DIR}/TrafficSignals.h
 
 PARENT_SCOPE)
