--- a/src/carla_osi/CMakeLists.txt
+++ b/src/carla_osi/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CARLA_OSI_LIB_SOURCE ${CARLA_OSI_LIB_SOURCE}
 ${CMAKE_CURRENT_LIST_DIR}/Geometry.cpp
 ${CMAKE_CURRENT_LIST_DIR}/Identifiers.cpp
 ${CMAKE_CURRENT_LIST_DIR}/Lanes.cpp
+${CMAKE_CURRENT_LIST_DIR}/TrafficSignals.cpp
 
 PARENT_SCOPE
 )
