--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,8 @@ set (TESTFILES
 ${CMAKE_CURRENT_LIST_DIR}/tests-main.cpp
 
 ${CMAKE_CURRENT_LIST_DIR}/testhelpers.h
-${CMAKE_CURRENT_LIST_DIR}/tests-CARLA2OSIInterface.cpp>
-${CMAKE_CURRENT_LIST_DIR}/tests-CARLAUtility.cpp>
-${CMAKE_CURRENT_LIST_DIR}/tests-CARLA-OSI.cpp>
+${CMAKE_CURRENT_LIST_DIR}/tests-CARLA2OSIInterface.cpp
+${CMAKE_CURRENT_LIST_DIR}/tests-CARLAUtility.cpp
+${CMAKE_CURRENT_LIST_DIR}/tests-CARLA-OSI.cpp
 
 PARENT_SCOPE)
