--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,11 +34,11 @@ endif()
 # Download automatically, you can also just copy the conan.cmake file
 if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
    message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
-   file(DOWNLOAD "https://github.com/conan-io/cmake-conan/raw/v0.15/conan.cmake"
+   file(DOWNLOAD "https://github.com/conan-io/cmake-conan/raw/v0.16.1/conan.cmake"
                  "${CMAKE_BINARY_DIR}/conan.cmake")
 endif()
 
-include(${CMAKE_BINARY_DIR}/conan.cmake)
+include(${CMAKE_BINARY_DIR}/conan.cmake REQUIRED)
 
 conan_check(VERSION 1.29.0)
 
@@ -48,7 +48,7 @@ conan_cmake_run(CONANFILE conanfile.txt
                 BUILD outdated)# option 'outdated' not only builds missing packages as does 'missing', but also packages with a newer recipe revision
 
 # include conan packages for protobuf, catch2, fakeit ...
-include(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
+include(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake REQUIRED)
 
 conan_basic_setup()
 
